fix line spacing

--- a/MMM-DateCounter.css
+++ b/MMM-DateCounter.css
@@ -22,6 +22,7 @@
 
 #DATE_COUNTER_COUNTDOWN_TEXT {
   font-size: 20pt;
+  line-height: 1em;
 }
 
 #DATE_COUNTER_ICON {
